Fixed problem with video links + aligned punctuation in stars

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -222,5 +222,8 @@ nav .input-field label {
   bottom: 0;
   background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%);
   z-index: 1;
-  margin: 0 .75rem;
+}
+
+.material-icons {
+  vertical-align: bottom;
 }
